Changelog
=========


2.5 (unreleased)
----------------

- Correcty set the response contenttype, to avoid problems with diazo themes.
  Issue #6 Richtigen Content-Type auf der Response bei remote requests zwischen Clients setzen
  https://extranet.4teamwork.ch/intranet/08-produkte-kurse/4teamwork-gever-1/tracker-4teamwork-gever/6
  [phgross]

- Added og specific Quickupload Factory, used by the tabbedview quickupload plugin.
  Issue #549 Abklaerung: Drag and drop
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/549
  [phgross]

- Replace description field property with a manually property: to fix decoding erros.
  Issue #1420 Plone Version und Dexterity Version auf aktuellste Version heben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1420
  [phgross]

- Remove deprecated methods: css_class_from_obj/css_class_from_brain
  [eschmutz]

- @@resolve_oguid: throw Unauthorized, not NotFound when the user has insufficient privileges.
  [jone]

- #1154 Umstellung OpenGever in GEVER
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1154
  Modified siteactions and Clientid viewlet
  [eschmutz]


2.4 (2012-03-28)
----------------

- Change french translation for help_privacy_layer
  [ttschanz]


2.3 (2012-02-28)
----------------

- Fixed french translations (end-of-line within string)
  [lgraf]

- Remove the standard 'extedit' action (CMFPlone) from document_actions on site setup
  [lgraf]


2.2 (2012-02-27)
----------------

- Reporter: added format functionality (set landsacpe format as default).
  [phgross]

- Extend get_css_class so that it supports global index objects.
  Issue #1412 Optimierung Mandant des Auftraggebers
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1412
  [jone]

- Fix get_css_class helper for tasks with predecessor (remote-task icon).
  Issue #1412 Optimierung Mandant des Auftraggebers